Fixed button spacing

--- a/src/routes/payment-confirmed/PaymentConfirmed.css
+++ b/src/routes/payment-confirmed/PaymentConfirmed.css
@@ -30,8 +30,9 @@
 
 .buttons-container{
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
 }
+
 .btns{
     flex: 1;
 }
